Limpieza de código